Closed Bug 977446 Opened 10 years ago Closed 10 years ago

Erroneous assertion in release_sync_buffer

Categories

(Core :: Gecko Profiler, defect)

All
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: bugzilla, Assigned: bugzilla)

Details

Attachments

(1 file, 2 obsolete files)

This assertion is firing even when everything is working correctly. This needs to be fixed.
Attached patch Potential fix (obsolete) — Splinter Review
This does appear to stop it asserting, yes.
Attachment #8382770 - Flags: review?(bgirard)
Comment on attachment 8382770 [details] [diff] [review]
Potential fix

Review of attachment 8382770 [details] [diff] [review]:
-----------------------------------------------------------------

Julian is a better reviewer for this.
Attachment #8382770 - Flags: review?(bgirard) → review?(jseward)
Attached patch bug977446c4.diff (obsolete) — Splinter Review
Rebased.
Attachment #8382770 - Attachment is obsolete: true
Attachment #8382770 - Flags: review?(jseward)
Attachment #8410181 - Attachment is obsolete: true
Attachment #8419037 - Flags: review?(jseward)
Attachment #8419037 - Flags: review?(jseward) → review+
https://hg.mozilla.org/mozilla-central/rev/3d6b4f6b09d2
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: