Bug 977446 - Fix erroneous assertion triggered during SyncProfile destruction; r=sewardj